--- a/demo.Rmd
+++ b/demo.Rmd
@@ -25,6 +25,12 @@ abline(model, col="red")
 
 ```
 
+```{r}
+library(aws.s3)
+print(key)
+data <- get_object(bucket = input_bucket_name, key = key)
+```
+
 ```{python}
 import pandas as pd
 import boto3
