--- a/demo.Rmd
+++ b/demo.Rmd
@@ -26,7 +26,7 @@ abline(model, col="red")
 ```
 
 ```{r}
-library(aws.s3)
+
 print(key)
 data <- get_object(bucket = input_bucket_name, key = key)
 ```
@@ -43,14 +43,15 @@ from io import StringIO
 
 # Specify the bucket name and file key (path)
 input_bucket_name = 'adp-eu-west-1-101965541725-dev2-dlz'
-input_file_key = 'edfdemo/ds_COTx_s4WGEN1_BrgTmp/'
+input_file_key = 'fisheries_wdfwraw/wa_salmon_species_population/'
 output_bucket_name = 'adp-eu-west-1-101965541725-dev2-lz'
-output_file_key = 'edfdemo/ds_COTx_s4WGEN1_BrgTmp_processed'
-user = 'dcherian'
+output_file_key = 'fisheries_wdfwraw/wa_salmon_species_population_processed'
+user = 'williammiller'
 file_type = 'csv'
 file_name = "processed"
 upload_date = str(int(time.time()))
 prefix = "/".join([output_file_key, "upload_date=" + upload_date, user, file_type, file_name])
+print(prefix)
 
 # Initialize the S3 client
 s3 = boto3.client('s3')
@@ -61,6 +62,7 @@ s3 = boto3.client('s3')
 
 file = s3.list_objects_v2(Bucket= input_bucket_name, Prefix = input_file_key)['Contents'][0]
 key = file.get('Key')
+print(key)
 object = s3.get_object(Bucket=input_bucket_name,Key=key)
 data = object['Body'].read().decode('utf-8')
 df = pd.read_csv(StringIO(data))
@@ -71,6 +73,12 @@ df2.shape
 
 bytes_to_write = df2.to_csv(index=False, header=True, sep=',', encoding='utf-8')
 s3.put_object(Bucket=output_bucket_name, Key=prefix, Body=bytes_to_write.encode('utf-8'))
+```
+
+```{python}
+
+input_file_key = 'fisheries_wdfwraw/creel_water_bodies/upload_date=1708686457/williammiller_6b703a30-ff52-4c09-9212-4bacde142de6_1708686457_WDFW-Creel_Water_Bodies.csv'
+object = s3.get_object(Bucket=input_bucket_name,Key=input_file_key)
 ```
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
